# esp32-c3-sushi-display

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
sushi-display-motor/: CMakeLists.txt  partitions.csv  sdkconfig
sushi-display-motor/main/: CMakeLists.txt  gc9a01.c  gc9a01.h  main.c  ssd1306.c  ssd1306.h
sushi-display-neon/: CMakeLists.txt  partitions.csv  sdkconfig
sushi-display-neon/flash_fs/: convert.html  index.html  sequence.json  sequences.html
sushi-display-neon/main/: CMakeLists.txt  config_menu.c  config_menu.h  display_sequence.c  display_sequence.h  font.c  font.h  idf_component.yml  main.c  neon_letter_service.c  neon_letter_service.h
sushi-display-neon/tools/: gif_to_bin.html  mp4_to_bmp.html  spritesheet_extract.html
tools/: bitmap_convert.html
